# KeyTester

./: KeyTester.py  KeyTester.spec  NOTICE.md  README.md  key_map.json  main.py  my_app.py  pyproject.toml
src/: change_dialog.py  change_key_map_dialog.py  config_manager.py  constants.py  edit_dialog.py  edit_switch_dialog.py  edit_switch_info_dialog.py  key_info_manager.py  key_map_manager.py  main.py  main_window.py  switch_info_manager.py  ui_manager.py
